--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "test:watch": "dotenv -e .env.test -- vitest",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:studio:test": "dotenv -e .env.test -- drizzle-kit studio",
+    "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
+    "pretest": "npm run db:migrate:test",
+    "pretest:watch": "npm run db:migrate:test"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
+    "@faker-js/faker": "^10.2.0",
     "@types/node": "^24.6.0",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
@@ -31,6 +36,8 @@
     "@fastify/multipart": "^9.2.1",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "^5.2.3",
+    "csv-stringify": "^6.6.0",
+    "dayjs": "^1.11.19",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.1",
     "fastify-type-provider-zod": "^6.0.0",
